3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Remove to eliminate autoconf complaints that configure.ac and configure.in
exist.
  configure.in:
Kevin Bulgrien, 2008-02-06

Change heading of high score command output to match the actual highscore data
by using <> instead of [] around max grace, hp, and sp.  The reason is that
when [max x] gets to a client that supports mediaTags, the text is treated
as a tag, and a log message is created about an unknown tag.
  server/hiscore.c
Kevin Bulgrien, 2008-02-06

Add stringbuffer_append_printf(), stringbuffer_append_stringbuffer(), and
stringbuffer_finish_shared().
  common/stringbuffer.c
  include/stringbuffer.h
Andreas Kirschbaum 2008-02-07

Fix for bug #1882265: Server failure when all exp_table entries commented out.
 common/exp.c: exit() in case of errors.
Nicolas Weeger, 2008-02-01

Changes for 1.11.0:
------------------------------------------------------------------------------
Fix for bug 1850524 - SDL clients crash when entering boat.  Bogus scroll
values were being sent on mapscroll, but only the SDL client did anything
with the mapscroll variables, so only it saw problems.
---
server/apply.c: Store away player x and y positions so we
  can do proper comparisions.  Move update of applier values out of
  if coordinates are different, since those need to get updated in all
  cases.
MSW 2008-01-27

Fix buffer overflows in get_ob_diff(). Introduce a new module stringbuffer
which implements a buffer that can hold variable-sized strings.
Andreas Kirschbaum 2008-01-12

Make 'player quits the game' in the same style as entered/leave messages.
 server/player.c
Nicolas Weeger 2008-01-07
