@@ -89,8 +89,8 @@ float exp_prot_mult[NROFATTACKS+2] = {
  * this is only used with one of the dumpflags,
  * and not anyplace in the code.
  */
-	
-int new_exp(const object *ob) {
+
+sint64 new_exp(const object *ob) {
   double	att_mult, prot_mult, spec_mult;
   double	exp;
   int		i;
@@ -127,7 +127,7 @@ int new_exp(const object *ob) {
   if (QUERY_FLAG(ob, FLAG_STAND_STILL))
     exp /= 2;
 
-  return (int) exp;
+  return (sint64) exp;
 }
 
 /*
