@@ -1547,7 +1547,7 @@ static int kill_object(object *op,int dam, object *hitter, int type)
 
     /* If you didn't kill yourself, and your not the wizard */
     if(owner!=op && !QUERY_FLAG(op, FLAG_WAS_WIZ)) {
-	int exp;
+	sint64 exp;
 
 	exp = calc_skill_exp(owner,op, skop);
 
