@@ -14,6 +14,15 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix some integer overflows in experience calculations.
+  common/exp.c
+  common/living.c
+  include/libproto.h
+  include/sproto.h
+  server/attack.c
+  server/skill_util.c
+Andreas Kirschbaum, 2008-03-08
+
 Fix i18n bug resulting in erroneous output for 'statistics' command.
  include/languages.h
 Kevin Bulgrien, 2008-03-02
